// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultTestViewContainerProvider can create assessment automated checks test view container 1`] = `
<AdhocIssuesTestView
  deps={
    {
      "automatedChecksCardSelectionMessageCreator": {},
      "needsReviewCardSelectionMessageCreator": {},
    }
  }
  includeStepsText={false}
  instancesSection={[Function]}
  someParentProp="parent-prop"
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
/>
`;

exports[`DefaultTestViewContainerProvider can create assessment test view container 1`] = `
<AssessmentTestView
  deps={
    {
      "automatedChecksCardSelectionMessageCreator": {},
      "needsReviewCardSelectionMessageCreator": {},
    }
  }
  someParentProp="parent-prop"
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
/>
`;

exports[`DefaultTestViewContainerProvider can create issues test view container 1`] = `
<AdhocIssuesTestView
  deps={
    {
      "automatedChecksCardSelectionMessageCreator": {},
      "needsReviewCardSelectionMessageCreator": {},
    }
  }
  instancesSection={[Function]}
  someParentProp="parent-prop"
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
/>
`;

exports[`DefaultTestViewContainerProvider can create needs review test view container 1`] = `
<AdhocIssuesTestView
  deps={
    {
      "automatedChecksCardSelectionMessageCreator": {},
      "needsReviewCardSelectionMessageCreator": {},
    }
  }
  instancesSection={[Function]}
  someParentProp="parent-prop"
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
/>
`;

exports[`DefaultTestViewContainerProvider can create static test view container 1`] = `
<AdhocStaticTestView
  deps={
    {
      "automatedChecksCardSelectionMessageCreator": {},
      "needsReviewCardSelectionMessageCreator": {},
    }
  }
  someParentProp="parent-prop"
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
/>
`;

exports[`DefaultTestViewContainerProvider can create tab stops test view container 1`] = `
<AdhocTabStopsTestView
  deps={
    {
      "automatedChecksCardSelectionMessageCreator": {},
      "needsReviewCardSelectionMessageCreator": {},
    }
  }
  someParentProp="parent-prop"
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
/>
`;
